# k8s-patch-app

./: Cargo.toml  README.md
src/: k8s_client.rs  main.rs
